--- a/studio/css/stwStyle.css
+++ b/studio/css/stwStyle.css
@@ -3,15 +3,19 @@
     font-size: 10pt;
 
     --special: 255, 0, 76;
-    --specialColor: rgb(var(--special));
-    --specialHover: rgba(var(--special), 0.6);
-    --light: rgba(127, 127, 127, 0.4);
+    --specialColor: rgba(var(--special), 0.6);
+    --specialHover: rgba(var(--special));
+    --light: rgba(150, 150, 150, 0.4);
     --padding: 0.5em;
     --input-height: 1.5em;
     --hideLabels: none;
     --menu-backcolor: black;
     --menu-forecolor: white;
-    --menu-hovercolor: rgba(var(--special), 0.6);
+    --menu-hovercolor: rgba(var(--special));
+}
+
+[tabindex="0"]:focus-within {
+    outline: 0;
 }
 
 .specialColor:hover {
@@ -54,7 +58,7 @@ form.stwHideLabels label {
 li[selected]>div,
 i[selected] {
     color: white;
-    background-color: var(--specialColor);
+    background-color: var(--specialHover);
 }
 
 [tabindex]:not(.stwTree):hover, .stwTree li>div:hover {
@@ -196,9 +200,9 @@ body {
     grid-template-columns: repeat(5, min-content) 1fr;
 }
 
-.stwBrowsebar i:hover,
+.stwBrowsebar>i:hover,
 h1>span>i:hover {
-    background-color: var(--light);
+    background-color: var(--light) !important;
     cursor: pointer;
 }
 
@@ -325,9 +329,6 @@ article:has(> :last-child:nth-child(4)) {
     padding: 0;
     cursor: pointer;
 }
-.stwTree ul:focus-visible {
-    outline:none;
-}
 
 .stwTree li>div {
     padding: 0 0.5em;
@@ -362,7 +363,7 @@ li[data-type=dir]>div>span:nth-child(2)::before {
     content: "\f468";
 }
 
-li[data-type=Page]>div>span:nth-child(2)::before,
+li[data-type=Unit]>div>span:nth-child(2)::before,
 li[data-type=file]>div>span:nth-child(2)::before {
     content: "\f466";
 }
