--- a/studio/css/stwStyle.css
+++ b/studio/css/stwStyle.css
@@ -67,12 +67,12 @@ i[selected] {
 
 span.cut::before {
     content: "\f0c4";
-    font: normal normal normal 1em/1 FontAwesome;
+    font: normal normal 100 1em/1 "Font Awesome 6 Pro";
     padding-right: 0.5em;
 }
 span.copy::before {
     content: "\f24d";
-    font: normal normal normal 1em/1 FontAwesome;
+    font: normal normal 100 1em/1 "Font Awesome 6 Pro";
     padding-right: 0.5em;
 }
 
@@ -122,7 +122,7 @@ body {
 
 .stwPanels {
     display: grid;
-    grid-template-rows: repeat(6, auto) 1fr repeat(1, auto);
+    grid-template-rows: repeat(7, auto) 1fr repeat(1, auto);
     grid-template-columns: auto;
     background-color: rgb(50, 50, 50);
     color: rgb(128, 128, 128)
@@ -349,7 +349,7 @@ ul.stwT li.stwT:not([selected]) ul.stwT li:not(.stwT)>div {
 li[data-type]>div>span:nth-child(2)::before {
     display: inline-block;
     padding-right: 0.5em;
-    font: normal normal normal 1em/1 FontAwesome;
+    font: normal normal 100 1em/1 "Font Awesome 6 Pro";
     text-align: center;
 }
 
@@ -435,13 +435,13 @@ li[data-type=ds]>div>span:nth-child(2)::before {
 }
 
 .stwMenu div.checked:after {
-    font: normal normal normal 1em/1 FontAwesome;
+    font: normal normal 100 1em/1 "Font Awesome 6 Pro";
     content: "\f00c";
     float: right;
 }
 
 .stwMenu li>ul>li>div:not(:last-child):after {
-    font: normal normal normal 1em/1 FontAwesome;
+    font: normal normal 100 1em/1 "Font Awesome 6 Pro";
     content: "\f0da";
     float: right;
 }
