--- a/studio/css/stwStyle.css
+++ b/studio/css/stwStyle.css
@@ -5,7 +5,7 @@
     --maincolor: #ff004c;
     --mainhovercolor: #cc003d;
     --light: hsla(0, 0%, 59%, 0.4);
-    --padding: 0.5em;
+    --padding: 0.25em 0.5em;
     --input-height: 1.5em;
     --hideLabels: none;
     --menubackcolor: black;
