--- a/stwStudio/css/stwStyle.css
+++ b/stwStudio/css/stwStyle.css
@@ -24,7 +24,8 @@
 .stwDark,
 .stwDark .stwPanel,
 .stwDark .stwTabs,
-.stwDark .stwFullScreen {
+.stwDark .stwFullScreen,
+.stwDark #stwPopup {
     color: white;
     background-color: rgb(62, 62, 62);
     color-scheme: dark;
@@ -33,7 +34,8 @@
 .stwLight,
 .stwLight .stwPanel,
 .stwLight .stwTabs,
-.stwLight .stwFullScreen {
+.stwLight .stwFullScreen,
+.stwLight #stwPopup {
     color: black;
     background-color: rgb(243, 243, 243);
     color-scheme: light;
@@ -139,6 +141,21 @@ body {
     padding: 0.5em 0.35em;
     cursor: pointer;
     font-size: 1.6em;
+}
+
+#stwPopup {
+    min-width: 40em;
+    min-height: 10em;
+    padding: 0 0 1em 0;
+    border: thin solid var(--light);
+}
+#stwPopup h1 {
+    background-color: var(--maincolor);
+    font-size: 1.1em;
+    font-variant: small-caps;
+    font-weight: lighter;
+    padding: 0.5em;
+    margin: 0 0 0.5em 0;
 }
 
 .stwPanel:empty {
@@ -376,7 +393,7 @@ li[data-type=dir]>div>span:nth-child(2)::before {
 }
 
 li[data-type=Unit]>div>span:nth-child(2)::before {
-    content: "\e196";
+    content: "\e323";
 }
 li[data-type=file]>div>span:nth-child(2)::before {
     content: "\f15b";
