--- a/public/css/stwStyle.css
+++ b/public/css/stwStyle.css
@@ -3,81 +3,359 @@
  * Copyright(c) 2023 Giancarlo Trevisan
  * MIT Licensed
  */
-:root { --special: #00b7ff; --fore: #333333; --faint: #a0a0a0; --back: #ffffff; }
+:root {
+    --specialcolor: #00b7ff;
+    --forecolor: #333333;
+    --lightcolor: #a0a0a0;
+    --backcolor: #ffffff;
+    --errorcolor: #ff0000;
+}
 
-a {color:inherit; text-decoration:none;}
+a {
+    color: var(--specialcolor);
+    text-decoration: none;
+}
 
-.stwError {background-color:#ff0000; color:#ffffff;}
-.stwSelected, .stwHover {background-color:var(--special) !important; color:#ffffff !important; border-color:var(--special) !important;}
-.stwHover {opacity:0.8;}
+[role="inspector"] {
+    cursor: pointer;
+    position: absolute;
+    z-index: 2;
+    background-color: #00000080;
+    color: #ffffff;
+    line-height: 2em;
+    width: 2em;
+}
+article [role="inspector"] {
+    display: none;
+}
+article:hover [role="inspector"] {
+    display: block;
+}
+.stwError {
+    background-color: var(--errorcolor);
+    color: #ffffff;
+}
 
-section {position:relative; padding:0;}
-/* section:hover {opacity: 0.8;} */
-article.stwContent {position:relative; padding:0.25em; border: thin dashed transparent; overflow:auto;}
-/* article.stwContent:hover {border-color: #000;} */
+.stwSelected,
+.stwHover {
+    background-color: var(--specialcolor) !important;
+    color: #ffffff !important;
+    border-color: var(--specialcolor) !important;
+}
 
-.stwCaption {color: var(--back); background-color: var(--special); margin:0.25em 0; padding: 0.25em 0.5em; border-radius: 0.25em;}
-.stwCaption .fa-times {float:right; line-height: 1.25em; cursor:pointer; font-size: smaller;}
-.stwHeader {display: block; margin:0.25em 0; padding: 0.25em 0.5em; }
-.stwFooter {display: block; margin:0.25em 0; padding: 0.25em 0.5em; }
-.stwUnitr {display: block;}
+.stwHover {
+    opacity: 0.8;
+}
 
-.stwRBV0 {color: var(--faint); font-weight: bold;}
-.stwRBV1 {color: var(--fore); font-weight: bold;}
-.stwRBV2 {color: var(--faint); font-weight: normal;}
-.stwRBV3 {color: var(--fore); font-weight: normal;}
+section {
+    position: relative;
+    padding: 0;
+}
 
-.stwText {position:relative; padding:1em;}
+article.stwContent {
+    position: relative;
+    padding: 0.25em;
+    border: thin dashed transparent;
+    overflow: auto;
+}
 
-.stwList li {padding: 0.25em; margin: 0;}
-.stwList li:hover {background-color: var(--special); color: var(--back);}
+.stwCaption {
+    color: var(--backcolor);
+    background-color: var(--specialcolor);
+    margin: 0.25em 0;
+    padding: 0.25em 0.5em;
+    border-radius: 0.25em;
+}
 
-.stwTabs {list-style-type:none; margin:0; padding:0;}
-.stwTabLabel {display:inline-block; padding:0.5em 1em; border:1px solid #f0f0f0; border-bottom:0; border-radius:0.5em 0.5em 0 0; min-width:1em; margin:0 0 0 0.25em; text-align:center; cursor:pointer; background-color:#f0f0f0;}
-.stwTabLabel:hover {background-color:#ffffff; color:#000000;}
-.stwTab {position:relative; border:1px solid #f0f0f0;}
+.stwCaption .fa-times {
+    float: right;
+    line-height: 1.25em;
+    cursor: pointer;
+    font-size: smaller;
+}
 
-.stwKeypad ol {list-style-type:none; margin:0; padding:0;}
-.stwKeypad li {display:inline-block; padding:0.5em; border:1px solid #f0f0f0; border-radius:0.5em; min-width:2em; margin:0.25em; text-align:center; cursor:pointer;}
-.stwKeypad li:hover {background-color:#f0f0f0; color:#000000;}
+.stwHeader {
+    display: block;
+    margin: 0.25em 0;
+    padding: 0.25em 0.5em;
+}
 
-.stwBreadcrumbs {margin:0.5em; text-transform:lowercase; font-size:smaller;}
-.stwBreadcrumbs a {padding:0.25em 0; cursor:pointer; }
-.stwBreadcrumbs a:hover {color:var(--special);}
+.stwFooter {
+    display: block;
+    margin: 0.25em 0;
+    padding: 0.25em 0.5em;
+}
 
-.stwMenu nav { display: inline-block; background-color: var(--back); color: var(--fore); }
-.stwMenu nav a { display: inline-block; width: calc(100% - 1em); text-decoration: none; color: inherit; }
-.stwMenu nav ol { display: flex; position: relative; z-index: 1; margin: 0; padding: 0; }
-.stwMenu nav a>span { display: inline-block; padding: 0 0 0 2em; }
-.stwMenu nav ol>li>ol { display: none; border: thin solid; position: absolute; left: 0; }
-.stwMenu nav ol>li>ol>li>ol { left: 100%; top: 0; }
-.stwMenu nav ol>li:hover>ol { display: block; }
-.stwMenu nav li { list-style: none; position: relative; }
-.stwMenu nav li>ol>li { min-width: 12em; }
-.stwMenu nav li>div { padding: 0.75em 1em; white-space: nowrap; }
-.stwMenu nav li>ol>li>div:not(:last-child):after { font-family: "Font Awesome 6 Free"; font-weight: 900; content: "\f0da"; float: right; }
-.stwMenu nav li>div:hover { background-color: var(--special); opacity: 1; }
-.stwMenu nav ol ol { background-color: var(--menu--special); color: var(--fore); opacity: 1; }
+.stwPager {
+    display: block;
+}
 
-.stwTree ol ol {list-style-type:none; margin:0;}
-.stwTree .stwBody>ol {margin:0;}
-.stwTree li>div {padding:0.25em; cursor:pointer;}
+.stwRBV0 {
+    color: var(--faintcolor);
+    font-weight: bold;
+}
 
-.stwCalendar ol {list-style-type:none; margin:0; padding:0;}
-.stwCalendar li {display:inline-block; padding:0.5em; min-width:3em; text-align:center;}
-.stwWeekday {color:var(--special); border-top:2px solid #f0f0f0;}
-.stwWeedday > div {font-size:0.50em;}
-.stwDay {cursor:pointer; border-top:1px solid #f0f0f0;}
-.stwDay > div {font-size:1.20em; padding:0.05em; border:1px solid transparent; border-radius:1.20em;}
-.stwDay:hover {background-color:#f0f0f0; color:#000000;}
-.stwToday > div {border-color:var(--special);}
+.stwRBV1 {
+    color: var(--forecolor);
+    font-weight: bold;
+}
 
-.stwChart svg {margin: 1em;}
-.stwChart circle, .stwChart path {stroke: #DDD; stroke-width: 1; fill: #FFF;}
-.stwChart polyline, .stwChart polygon {fill: none; vector-effect: non-scaling-stroke;}
-.stwChart .grid {stroke: #DDD; stroke-dasharray: 1 1; shape-rendering: crispEdges; vector-effect: non-scaling-stroke;}
-.stwChart .axes {stroke-width: 1px; stroke: #000; shape-rendering: crispEdges; vector-effect: non-scaling-stroke;}
-.stwChart text {fill: #000;}
+.stwRBV2 {
+    color: var(--faintcolor);
+    font-weight: normal;
+}
 
-.stwLanguages a {display:inline-block; width: 2em; text-align: center; padding:0.25em; margin:0.25em; cursor:pointer; border-radius:0.5em; border:thin solid transparent; font-size: smaller; text-transform: uppercase;}
-.stwLanguages a:hover {border:thin solid #f0f0f0;}
+.stwRBV3 {
+    color: var(--forecolor);
+    font-weight: normal;
+}
+
+.stwText {
+    position: relative;
+    padding: 1em;
+}
+
+.stwList li {
+    padding: 0.25em;
+    margin: 0;
+}
+
+.stwTabs {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.stwTabLabel {
+    display: inline-block;
+    padding: 0.5em 1em;
+    border: 1px solid #f0f0f0;
+    border-bottom: 0;
+    border-radius: 0.5em 0.5em 0 0;
+    min-width: 1em;
+    margin: 0 0 0 0.25em;
+    text-align: center;
+    cursor: pointer;
+    background-color: #f0f0f0;
+}
+
+.stwTabLabel:hover {
+    background-color: #ffffff;
+    color: #000000;
+}
+
+.stwTab {
+    position: relative;
+    border: 1px solid #f0f0f0;
+}
+
+.stwKeypad ol {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.stwKeypad li {
+    display: inline-block;
+    padding: 0.5em;
+    border: 1px solid #f0f0f0;
+    border-radius: 0.5em;
+    min-width: 2em;
+    margin: 0.25em;
+    text-align: center;
+    cursor: pointer;
+}
+
+.stwKeypad li:hover {
+    background-color: #f0f0f0;
+    color: #000000;
+}
+
+.stwBreadcrumbs {
+    margin: 0.5em;
+    text-transform: lowercase;
+    font-size: smaller;
+}
+
+.stwBreadcrumbs a {
+    padding: 0.25em 0;
+    cursor: pointer;
+}
+
+.stwMenu nav {
+    display: inline-block;
+    background-color: var(--backcolor);
+    color: var(--forecolor);
+}
+
+.stwMenu nav a {
+    display: inline-block;
+    width: calc(100% - 1em);
+    text-decoration: none;
+    color: inherit;
+}
+
+.stwMenu nav ol {
+    display: flex;
+    position: relative;
+    z-index: 1;
+    margin: 0;
+    padding: 0;
+}
+
+.stwMenu nav a>span {
+    display: inline-block;
+    padding: 0 0 0 2em;
+}
+
+.stwMenu nav ol>li>ol {
+    display: none;
+    border: thin solid;
+    position: absolute;
+    left: 0;
+}
+
+.stwMenu nav ol>li>ol>li>ol {
+    left: 100%;
+    top: 0;
+}
+
+.stwMenu nav ol>li:hover>ol {
+    display: block;
+}
+
+.stwMenu nav li {
+    list-style: none;
+    position: relative;
+}
+
+.stwMenu nav li>ol>li {
+    min-width: 12em;
+}
+
+.stwMenu nav li>div {
+    padding: 0.75em 1em;
+    white-space: nowrap;
+}
+
+.stwMenu nav li>ol>li>div:not(:last-child):after {
+    font-family: "Font Awesome 6 Free";
+    font-weight: 900;
+    content: "\f0da";
+    float: right;
+}
+
+.stwMenu nav li>div:hover {
+    background-color: var(--specialcolor);
+    opacity: 1;
+}
+
+.stwMenu nav ol ol {
+    background-color: var(--menu--specialcolor);
+    color: var(--forecolor);
+    opacity: 1;
+}
+
+.stwTree ol ol {
+    list-style-type: none;
+    margin: 0;
+}
+
+.stwTree .stwBody>ol {
+    margin: 0;
+}
+
+.stwTree li>div {
+    padding: 0.25em;
+    cursor: pointer;
+}
+
+.stwCalendar ol {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+.stwCalendar li {
+    display: inline-block;
+    padding: 0.5em;
+    min-width: 3em;
+    text-align: center;
+}
+
+.stwWeekday {
+    color: var(--specialcolor);
+    border-top: 2px solid #f0f0f0;
+}
+
+.stwWeedday>div {
+    font-size: 0.50em;
+}
+
+.stwDay {
+    cursor: pointer;
+    border-top: 1px solid #f0f0f0;
+}
+
+.stwDay>div {
+    font-size: 1.20em;
+    padding: 0.05em;
+    border: 1px solid transparent;
+    border-radius: 1.20em;
+}
+
+.stwToday>div {
+    border-color: var(--specialcolor);
+}
+
+.stwChart svg {
+    margin: 1em;
+}
+
+.stwChart circle,
+.stwChart path {
+    stroke: #DDD;
+    stroke-width: 1;
+    fill: #FFF;
+}
+
+.stwChart polyline,
+.stwChart polygon {
+    fill: none;
+    vector-effect: non-scaling-stroke;
+}
+
+.stwChart .grid {
+    stroke: #DDD;
+    stroke-dasharray: 1 1;
+    shape-rendering: crispEdges;
+    vector-effect: non-scaling-stroke;
+}
+
+.stwChart .axes {
+    stroke-width: 1px;
+    stroke: #000;
+    shape-rendering: crispEdges;
+    vector-effect: non-scaling-stroke;
+}
+
+.stwChart text {
+    fill: #000;
+}
+
+.stwLanguages a {
+    display: inline-block;
+    width: 2em;
+    text-align: center;
+    padding: 0.25em;
+    margin: 0.25em;
+    cursor: pointer;
+    border-radius: 0.5em;
+    border: thin solid transparent;
+    font-size: smaller;
+    text-transform: uppercase;
+}
+
+.stwLanguages a:hover {
+    border: thin solid #f0f0f0;
+}
