--- a/public/css/stwStyle.css
+++ b/public/css/stwStyle.css
@@ -17,7 +17,7 @@ a {
 }
 
 .stwInspect:hover {
-    opacity: 0.5;
+    font-style: italic !important;
 }
 
 [role="inspector"] {
@@ -190,6 +190,7 @@ article.stwContent {
 }
 
 .stwMenu nav {
+    font: menu;
     display: inline-block;
     background-color: var(--backcolor);
     color: var(--forecolor);
